{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 35,
  "lineage": "fa4fa672-1c48-9595-8ef8-b6d61b78054a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533267288999:vpc/vpc-0e103eb0fa0b43069",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08b8417bd9a89781a",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05eb89b5d44f2661b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Module",
                "values": [
                  "network"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "cap-dev-vpc"
                ]
              },
              {
                "name": "tag:Purpose",
                "values": [
                  "main"
                ]
              }
            ],
            "id": "vpc-0e103eb0fa0b43069",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015b42bab721deaa7",
            "owner_id": "533267288999",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "network",
              "Name": "cap-dev-vpc",
              "Project": "cap",
              "Purpose": "main"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:loadbalancer/app/zohlar-alb-tf/a1035e8e8b385a3a",
            "arn_suffix": "app/zohlar-alb-tf/a1035e8e8b385a3a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zohlar-alb-tf-1904549395.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:loadbalancer/app/zohlar-alb-tf/a1035e8e8b385a3a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zohlar-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e7ae35d9a78ec20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04761a6b10a70675e"
              },
              {
                "subnet_id": "subnet-091bbca9d2986d0a7"
              },
              {
                "subnet_id": "subnet-0dfaaf8eb56358aeb"
              }
            ],
            "subnets": [
              "subnet-04761a6b10a70675e",
              "subnet-091bbca9d2986d0a7",
              "subnet-0dfaaf8eb56358aeb"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tf",
              "Project": "CAP"
            },
            "vpc_id": "vpc-0e103eb0fa0b43069",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.core",
            "module.security.aws_security_group.alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:listener/app/zohlar-alb-tf/a1035e8e8b385a3a/4a03fc94c346f0ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:listener/app/zohlar-alb-tf/a1035e8e8b385a3a/4a03fc94c346f0ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:loadbalancer/app/zohlar-alb-tf/a1035e8e8b385a3a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tf",
              "Project": "CAP"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.core",
            "module.alb.aws_lb.alb",
            "module.security.aws_security_group.alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:listener/app/zohlar-alb-tf/a1035e8e8b385a3a/6d174715e4d318b7",
            "certificate_arn": "arn:aws:acm:eu-central-1:533267288999:certificate/89b9b117-239f-4cd8-b061-027a70bece85",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:targetgroup/zohlar-alb-tg-tf-5f7ae7bb/4fd0c49bcaf1b4ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:listener/app/zohlar-alb-tf/a1035e8e8b385a3a/6d174715e4d318b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:loadbalancer/app/zohlar-alb-tf/a1035e8e8b385a3a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.main",
            "data.aws_subnets.public",
            "data.aws_vpc.core",
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.target_group",
            "module.alb.random_id.target_group_suffix",
            "module.security.aws_security_group.alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:targetgroup/zohlar-alb-tg-tf-5f7ae7bb/4fd0c49bcaf1b4ee",
            "arn_suffix": "targetgroup/zohlar-alb-tg-tf-5f7ae7bb/4fd0c49bcaf1b4ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533267288999:targetgroup/zohlar-alb-tg-tf-5f7ae7bb/4fd0c49bcaf1b4ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:533267288999:loadbalancer/app/zohlar-alb-tf/a1035e8e8b385a3a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zohlar-alb-tg-tf-5f7ae7bb",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tg-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tg-tf",
              "Project": "CAP"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e103eb0fa0b43069"
          },
          "dependencies": [
            "data.aws_vpc.core",
            "module.alb.random_id.target_group_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533267288999:security-group/sg-08e7ae35d9a78ec20",
            "description": "Security group for zohlar ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e7ae35d9a78ec20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "zohlar-alb-sg-tf",
            "name_prefix": "",
            "owner_id": "533267288999",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e103eb0fa0b43069"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.core"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533267288999:security-group/sg-034bfc31580db2fc2",
            "description": "Security group for zohlar ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034bfc31580db2fc2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound and health checks from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7ae35d9a78ec20"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "zohlar-ecs-sg-tf",
            "name_prefix": "",
            "owner_id": "533267288999",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e103eb0fa0b43069"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.core",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}